--- a/README
+++ b/README
@@ -24,3 +24,5 @@ Copy or symlink syntax/log.vim file to your $VIMRUNTIME/syntax directory or to
 Copy or symlink ftdetect/log.vim file to your $VIMRUNTIME/syntax directory or to
 ~/.vim/ftdetect directory.
 
+If you want to create a symlink, make sure, you use an absolute one.
+
